fix: memperbaiki bug tidak bisa menyimpan session login admin

--- a/public/assets/css/coloring.css
+++ b/public/assets/css/coloring.css
@@ -32,3 +32,6 @@
 .bg-main {
    background: linear-gradient(to bottom, #4e73df, #6f42c1);
 }
+.bg-nav {
+   background: linear-gradient(to right, #4e73df, #6f42c1);
+}
